environments/default/wat/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wat
  name: wat
  namespace: wat
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: wat
